force-app/main/default/objects/Contact/fields/PC_FEC_Cambio_de_Cargo__c.field-meta.xml
<CustomField>
    <fullName>PC_FEC_Cambio_de_Cargo__c</fullName>
    <description>Fija la fecha cuando el contacto cambio de cargo</description>
    <label>Cambio de Cargo</label>
    <type>Date</type>
</CustomField>