force-app/main/default/objects/Contact/fields/PC_FOR_Linkedin__c.field-meta.xml
<CustomField>
    <fullName>PC_FOR_Linkedin__c</fullName>
    <formula>HYPERLINK(&#39;https://www.linkedin.com/search/results/index/?keywords=firstname:"&#39; + FirstName + &#39;" AND lastname:"&#39; + LastName + &#39;"&amp;origin=GLOBAL_SEARCH_HEADER&#39;, &#39;Search on LinkedIn&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linkedin</label>
    <type>Text</type>
</CustomField>