force-app/main/default/objects/Contact/fields/PC_SEL_Cargo__c.field-meta.xml
<CustomField>
    <fullName>PC_SEL_Cargo__c</fullName>
    <description>Permite seleccionar el cargo empresarial que posee el contacto</description>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Gerente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>