force-app/main/default/objects/Contact/fields/PC_TXT_Apellido__c.field-meta.xml
<CustomField>
    <fullName>PC_TXT_Apellido__c</fullName>
    <description>Describe el apellido del contacto</description>
    <label>Apellido</label>
    <type>TextArea</type>
</CustomField>