force-app/main/default/objects/Contact/fields/PC_TXT_Mapa__c.field-meta.xml
<CustomField>
    <fullName>PC_TXT_Mapa__c</fullName>
    <description>Muestra el mapa de la direccón del contacto</description>
    <formula>IMAGE(SUBSTITUTE(
				SUBSTITUTE("https://maps.googleapis.com/maps/api/staticmap?center=" + MailingStreet + "," + MailingCity + "," + MailingState + "," + MailingCountry + "&amp;zoom=13&amp;size=700x350&amp;markers=color:red|" + MailingStreet + "," + MailingCity + "," + MailingState + "," + MailingCountry + "\"" + "&amp;sensor=false", " ", "%20"),
				"ñ",&#39;n&#39;), "No map available", 350, 700)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mapa</label>
    <type>Text</type>
</CustomField>